<?xml version="1.0"?>
<package format="2">
  <name>calculate_imu_angle_ros</name>
  <version>0.0.1</version>
  <description>The calculate_imu_angle_ros package</description>

  <maintainer email="laiyichengyuntech@gmail.com">laiyicheng</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
